--- a/website/app/application/core/components/properties/partials/display-measurement.html
+++ b/website/app/application/core/components/properties/partials/display-measurement.html
@@ -43,12 +43,17 @@
         </span>
     </div>
     <div ng-switch-when="histogram">
-        <a href="" popover="Graph displayed here...."
-           popover-title="Particle size distribution">{{measure.name}}
-            <i class="fa fa-bar-chart"></i>
-        </a>
+        <!--<a href="" popover="Graph displayed here...."-->
+        <!--popover-title="Particle size distribution">{{measure.name}}-->
+        <!--<i class="fa fa-bar-chart"></i>-->
+        <!--</a>-->
+         <span style="padding-left: 30px;">
+            <a ng-click="showHistogram(measure)"><i class="fa fa-fw fa-bar-chart"></i></a>
+        </span>
     </div>
     <div ng-switch-when="line">
-        <a ng-click="showLineChart(measure)" ><i class="fa fa-fw fa-line-chart"></i></a>
+        <span style="padding-left: 30px;">
+            <a ng-click="showLineGraph(measure)"><i class="fa fa-fw fa-line-chart"></i></a>
+        </span>
     </div>
 </div>
