--- a/website/app/application/core/components/properties/partials/property-histogram.html
+++ b/website/app/application/core/components/properties/partials/property-histogram.html
@@ -5,11 +5,11 @@
         <div ng-if="openAddMeasurements">
             <div class="col-xs-6">
                 <strong>Categories (one entry per line)</strong>
-                <textarea ng-model="property.measurement.categories" class="col-xs-10" rows="20"></textarea>
+                <textarea ng-model="property.value.categories" class="col-xs-10" rows="20"></textarea>
             </div>
             <div class="col-xs-6">
                 <strong>Values (one entry per line)</strong>
-                <textarea ng-model="property.measurement.values" class="col-xs-10" rows="20"></textarea>
+                <textarea ng-model="property.value.values" class="col-xs-10" rows="20"></textarea>
             </div>
             <!--<div class="row">-->
                 <!--<button ng-click="submitMeasurement()" class="btn btn-success">Submit</button>-->
