--- a/website/app/application/core/components/properties/partials/display-measurement.html
+++ b/website/app/application/core/components/properties/partials/display-measurement.html
@@ -2,7 +2,7 @@
     <div ng-switch-when="number">
         <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
         <span style="padding-left: 30px;">
-            <img src="assets/img/splash/process-icon.png"
+            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
@@ -11,7 +11,7 @@
     <div ng-switch-when="fraction">
         <span style="padding-left: 30px;">{{measure.value.attribute1}}/{{measure.value.attribute2}} {{measure.unit}}</span>
         <span style="padding-left: 30px;">
-            <img src="assets/img/splash/process-icon.png"
+            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
@@ -20,7 +20,7 @@
     <div ng-switch-when="string">
         <span style="padding-left: 30px;"> {{measure.value}}</span>
         <span style="padding-left: 30px;">
-            <img src="assets/img/splash/process-icon.png"
+            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
@@ -29,7 +29,7 @@
     <div ng-switch-when="composition">
         <span style="padding-left: 30px;"> {{measure.element}} - {{measure.value}} {{measure.unit}}</span>
         <span style="padding-left: 30px;">
-            <img src="assets/img/splash/process-icon.png"
+            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
@@ -46,8 +46,8 @@
          <span style="padding-left: 30px;">
             <a ng-click="showHistogram(measure)"><i class="fa fa-fw fa-bar-chart"></i></a>
         </span>
-        <span ng-if="currentProcess" style="padding-left: 30px;">
-            <img src="assets/img/splash/process-icon.png"
+        <span  style="padding-left: 30px;">
+            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
           <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
@@ -58,7 +58,7 @@
             <a ng-click="showLineGraph(measure)"><i class="fa fa-fw fa-line-chart"></i></a>
         </span>
         <span style="padding-left: 30px;">
-            <img src="assets/img/splash/process-icon.png"
+            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
           <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
