--- a/website/app/application/core/components/properties/partials/property-histogram.html
+++ b/website/app/application/core/components/properties/partials/property-histogram.html
@@ -1,8 +1,7 @@
 <div>
     <div class="row">
         <h5>Measurements</h5>
-        <a ng-click="openAddMeasurements = !openAddMeasurements">add measurement</a>
-        <div ng-if="openAddMeasurements">
+        <div>
             <div class="col-xs-6">
                 <strong>Categories (one entry per line)</strong>
                 <textarea ng-model="property.value.categories" class="col-xs-10" rows="20"></textarea>
