Add class for mc icon images so we don't have style statements.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -2355,6 +2355,12 @@ header {
   line-height: 24px;
 }
 
+.mc-icon-image {
+  height: 30px;
+  padding-bottom: 10px;
+  margin-right:5px
+}
+
 .details-main-content .who {
   color: #919191;
   font-weight: 500
