--- a/website/app/application/core/components/properties/partials/display-measurement.html
+++ b/website/app/application/core/components/properties/partials/display-measurement.html
@@ -3,63 +3,74 @@
         <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
         <span style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
+                 style="height: 25px;padding-bottom: 10px;">
+            <a ng-click="openProcess(measure.process[0].id)">{{measure.process[0].name}}</a>
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
                 style="color:red;" class="fa fa-asterisk"></i></span>
     </div>
+
     <div ng-switch-when="fraction">
         <span style="padding-left: 30px;">{{measure.value.attribute1}}/{{measure.value.attribute2}} {{measure.unit}}</span>
         <span style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px; margin-right: 5px">{{measure.process[0].name}}
+                 style="height: 25px;padding-bottom: 10px; margin-right: 5px">
+            <a ng-click="openProcess(measure.process[0].id)">{{measure.process[0].name}}</a>
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
                 style="color:red;" class="fa fa-asterisk"></i></span>
     </div>
+
     <div ng-switch-when="string">
         <span style="padding-left: 30px;"> {{measure.value}}</span>
         <span style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
+                 style="height: 25px;padding-bottom: 10px;">
+            <a ng-click="openProcess(measure.process[0].id)">{{measure.process[0].name}}</a>
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
                 style="color:red;" class="fa fa-asterisk"></i></span>
     </div>
+
     <div ng-switch-when="composition">
         <span style="padding-left: 30px;"> {{measure.element}} - {{measure.value}} {{measure.unit}}</span>
         <span style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
+                 style="height: 25px;padding-bottom: 10px;">
+            <a ng-click="openProcess(measure.process[0].id)">{{measure.process[0].name}}</a>
         </span>
         <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
                 style="color:red;" class="fa fa-asterisk"></i></span>
     </div>
+
     <div ng-switch-when="pair">
         <span style="padding-left: 30px;">
             {{measure.attribute1.value}} {{measure.attribute1.unit}} ::
             {{measure.attribute2.value}} {{measure.attribute2.unit}}
-
         </span>
     </div>
+
     <div ng-switch-when="histogram">
          <span style="padding-left: 30px;">
             <a ng-click="showHistogram(measure)"><i class="fa fa-fw fa-bar-chart"></i></a>
         </span>
         <span  style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
+                 style="height: 25px;padding-bottom: 10px;">
+            <a ng-click="openProcess(measure.process[0].id)">{{measure.process[0].name}}</a>
         </span>
           <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
                   style="color:red;" class="fa fa-asterisk"></i></span>
     </div>
+
     <div ng-switch-when="line">
         <span style="padding-left: 30px;">
             <a ng-click="showLineGraph(measure)"><i class="fa fa-fw fa-line-chart"></i></a>
         </span>
         <span style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
+                 style="height: 25px;padding-bottom: 10px;">
+            <a ng-click="openProcess(measure.process[0].id)">{{measure.process[0].name}}</a>
         </span>
           <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
                   style="color:red;" class="fa fa-asterisk"></i></span>
