--- a/website/app/application/core/components/properties/partials/display-measurement.html
+++ b/website/app/application/core/components/properties/partials/display-measurement.html
@@ -1,12 +1,40 @@
 <div ng-switch="measure._type">
     <div ng-switch-when="number">
-        <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
-        <span style="padding-left: 30px;">
-            <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
-                 style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
-        </span>
-        <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
-                style="color:red;" class="fa fa-asterisk"></i></span>
+        <div ng-if="editMeasure">
+            <div ng-if="currentProcess && measure.process[0].id === currentProcess">
+                   <span style="padding-left: 30px;">
+                        <input style="width: 60px;" ng-model="measure.value">
+                        <input style="width: 60px;" ng-model="measure.unit">
+                    </span>
+                    <span style="padding-left: 30px;">
+                        <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
+                             style="height: 25px;padding-bottom: 10px;">
+                        {{measure.process[0].name}}
+                    </span>
+                    <span style="padding-left:20px;"><i
+                            style="color:red;" class="fa fa-asterisk"></i>
+                    </span>
+            </div>
+            <div ng-if="currentProcess && measure.process[0].id !== currentProcess">
+                <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
+                    <span style="padding-left: 30px;">
+                        <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
+                             style="height: 25px;padding-bottom: 10px;">
+                        {{measure.process[0].name}}
+                    </span>
+            </div>
+        </div>
+        <div ng-if="!editMeasure">
+            <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
+            <span style="padding-left: 30px;">
+                <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
+                     style="height: 25px;padding-bottom: 10px;">
+                {{measure.process[0].name}}
+            </span>
+            <span ng-if="currentProcess && measure.process[0].id === currentProcess" style="padding-left:20px;"><i
+                    style="color:red;" class="fa fa-asterisk"></i></span>
+        </div>
+
     </div>
     <div ng-switch-when="fraction">
         <span style="padding-left: 30px;">{{measure.value.attribute1}}/{{measure.value.attribute2}} {{measure.unit}}</span>
@@ -46,7 +74,7 @@
          <span style="padding-left: 30px;">
             <a ng-click="showHistogram(measure)"><i class="fa fa-fw fa-bar-chart"></i></a>
         </span>
-        <span  style="padding-left: 30px;">
+        <span style="padding-left: 30px;">
             <img ng-if="currentProcess" src="assets/img/splash/process-icon.png"
                  style="height: 25px;padding-bottom: 10px;">{{measure.process[0].name}}
         </span>
