fixed sample-files-link bug and added unit choices

--- a/website/app/application/core/components/properties/partials/property-histogram.html
+++ b/website/app/application/core/components/properties/partials/property-histogram.html
@@ -3,11 +3,13 @@
         <h5>Measurements</h5>
         <div>
             <div class="col-xs-6">
-                <strong>Categories (one entry per line)</strong>
+                <strong>Categories </strong> <br>
+                <strong> (one entry per line) </strong><br>
                 <textarea ng-model="property.value.categories" class="col-xs-10" rows="20"></textarea>
             </div>
             <div class="col-xs-6">
-                <strong>Values (one entry per line)</strong>
+                <strong>Values</strong> <br>
+                <strong>(one entry per line) </strong><br>
                 <textarea ng-model="property.value.values" class="col-xs-10" rows="20"></textarea>
             </div>
             <!--<div class="row">-->
