--- a/website/app/application/core/components/properties/partials/property-number.html
+++ b/website/app/application/core/components/properties/partials/property-number.html
@@ -1,29 +1,25 @@
-<div>
-    <label class="col-xs-3 control-label" for="numberInput">
-        {{::property.name}}
+<div class="row">
+    <div class="col-xs-3">
+        <b>{{::property.name}}</b>
         <i ng-if="property.required" class="fa fa-fw fa-asterisk text-danger"></i>
-    </label>
-
-    <div class="col-xs-6">
-        <div class="col-xs-8">
-            <input type="number"
-                   id="numberInput"
-                   step="any"
-                   class="form-control"
-                   ng-required="property.required"
-                   ng-model="property.value">
-        </div>
+    </div>
+    <div class="col-xs-3">
+        <input style="width: 100px;" type="number" id="numberInput" step="any" class="form-control"
+               ng-required="property.required" ng-model="property.value">
+    </div>
+    <div class="col-xs-3">
         <span ng-if="property.units.length === 0">{{::property.unit}}</span>
-                        <span class="col-xs-4" ng-if="property.units.length !== 0">
-                            <select ng-model="property.unit" data-placeholder="Choose"
-                                    class="form-control"
-                                    ng-required="property.required">
-                                <option value="{{choice}}"
-                                        ng-repeat="choice in property.units">
-                                    {{ choice }}
-                                </option>
-                            </select>
-                        </span>
+        <span ng-if="property.units.length !== 0">
+        <select style="width: 100px;" ng-model="property.unit" data-placeholder="Choose"
+                class="form-control" ng-required="property.required">
+            <option value="{{choice}}" ng-repeat="choice in property.units">
+                {{ choice }}
+            </option>
+        </select>
+        </span>
+    </div>
+
+    <div class="row">
         <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::property.name}}</span>
         <span class="help-block">{{::property.description}}</span>
     </div>
