--- a/website/app/application/core/components/properties/partials/property-selection.html
+++ b/website/app/application/core/components/properties/partials/property-selection.html
@@ -1,32 +1,31 @@
-<div>
-    <label class="col-xs-3 control-label" for="selectInput">
-        {{::property.name}}
-        <i ng-if="property.required"
-           class="fa fa-fw fa-asterisk text-danger"></i>
-    </label>
-
-    <div class="col-xs-6">
-        <div class="col-xs-8">
-            <select ng-model="property.value" data-placeholder="Choose"
-                    id="selectInput"
-                    class="form-control "
-                    ng-required="property.required">
-                <option value="{{choice.value}}" ng-repeat="choice in property.choices">{{
-                    choice.name }}
+<div class="row">
+    <div class="col-xs-3">
+        <b>{{::property.name}}</b>
+        <i ng-if="property.required" class="fa fa-fw fa-asterisk text-danger"></i>
+    </div>
+    <div class="col-xs-3">
+        <select ng-model="property.value" data-placeholder="Choose"
+                id="selectInput"
+                class="form-control "
+                ng-required="property.required">
+            <option value="{{choice.value}}" ng-repeat="choice in property.choices">
+                {{ choice.name }}
+            </option>
+        </select>
+    </div>
+    <div class="col-xs-3">
+        <span ng-if="property.units.length === 0">{{::property.unit}}</span>
+        <span ng-if="property.units.length !== 0">
+            <select ng-model="property.unit" data-placeholder="Choose"
+                    class="form-control" ng-required="property.required">
+                <option value="{{choice}}" ng-repeat="choice in property.units">
+                    {{ choice }}
                 </option>
             </select>
-        </div>
-        <span ng-if="property.units.length === 0">{{::property.unit}}</span>
-                        <span class="col-xs-4" ng-if="property.units.length !== 0">
-                            <select ng-model="property.unit" data-placeholder="Choose"
-                                    class="form-control"
-                                    ng-required="property.required">
-                                <option value="{{choice}}"
-                                        ng-repeat="choice in property.units">
-                                    {{ choice }}
-                                </option>
-                            </select>
-                        </span>
+        </span>
+    </div>
+
+    <div class="row">
         <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::property.name}}</span>
         <span class="help-block">{{::property.description}}</span>
     </div>
