validation for create-creview form

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -2478,3 +2478,11 @@ header {
     border-style: solid;
     border-color: white;
 }
+
+.errors{
+    color: red;
+}
+
+.btn-inactive {
+    background-color: grey;
+}
