--- a/website/app/application/core/components/properties/partials/property-fraction.html
+++ b/website/app/application/core/components/properties/partials/property-fraction.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-form="propertyForm">
     <label class="col-xs-3 control-label">
         {{::property.name}}
         <i ng-if="property.required" class="fa fa-fw fa-asterisk text-danger"></i>
@@ -6,6 +6,7 @@
     <div class="col-xs-3">
         <input type="number"
                step="any"
+               name="attribute1"
                class="form-control"
                ng-required="property.required"
                ng-model="property.value.attribute1">
@@ -17,6 +18,7 @@
         <input type="number"
                step="any"
                class="form-control"
+               name="attribute2"
                ng-required="property.required"
                ng-model="property.value.attribute2">
     </div>
@@ -32,8 +34,18 @@
                 </option>
             </select>
         </div>
-        <div ng-show="form.fractionInput.$error.required" class="text-danger"> You must supply a value for {{::property.name}}</div>
         <div class="help-block">{{::property.description}}</div>
     </div>
-
+    <br><div class="row">
+        <div ng-messages="propertyForm.attribute1.$error" class="errors">
+            <div ng-message="number"><u>Numerator: </Not a valid fraction.</div>
+            <div ng-message="required">Its a required field.</div>
+        </div>
+    </div>
+    <div class="row">
+        <div ng-messages="propertyForm.attribute2.$error" class="errors">
+            <div ng-message="number"><u>Denominator: </u> NOt a valid fraction.</div>
+            <div ng-message="required">Its a required field.</div>
+        </div>
+    </div>
 </div>
