--- a/website/app/application/core/components/properties/partials/property-string.html
+++ b/website/app/application/core/components/properties/partials/property-string.html
@@ -1,5 +1,5 @@
-<div>
-    <label class="col-xs-3 control-label" for="stringInput">
+<div ng-form="propertyForm">
+    <label class="col-xs-3 control-label">
         {{::property.name}}
         <i ng-if="property.required"
            class="fa fa-fw fa-asterisk text-danger"></i>
@@ -7,12 +7,15 @@
 
     <div class="col-xs-6">
         <input type="text"
-               id="stringInput"
                class="form-control"
                name="stringInput"
                ng-required="property.required"
                ng-model="property.value">
-        <span ng-show="form.stringInput.$error.required" class="text-danger">You must supply a {{::property.name}}.</span>
         <span class="help-block">{{::property.description}}</span>
+    </div>
+    <br><div class="row">
+        <div ng-messages="propertyForm.stringInput.$error" class="row errors">
+            <div ng-message="required">Its a required field.</div>
+        </div>
     </div>
 </div>
