--- a/website/app/application/core/components/properties/partials/property-number.html
+++ b/website/app/application/core/components/properties/partials/property-number.html
@@ -19,4 +19,7 @@
         type: {{property._type}}
         <textarea ng-model="property.value" class="col-xs-12" rows="20"></textarea>
     </div>
+    <div class="col-xs-4">
+        <p class="errors">{{message}}</p>
+    </div>
 </div>
