update meaurements functionality

--- a/website/app/application/core/components/properties/partials/property-histogram.html
+++ b/website/app/application/core/components/properties/partials/property-histogram.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h4>{{property.name}} :: {{property.description}}</h4>
+    <h4>{{property.name}} : {{property.description}}</h4>
     <hr/>
     <div class="col-xs-6">
         <strong>Categories </strong> <br>
