--- a/website/app/application/core/components/properties/partials/property-line.html
+++ b/website/app/application/core/components/properties/partials/property-line.html
@@ -1,5 +1,6 @@
 <div>
-    <h5>Measurements</h5>
+    <h4>{{property.name}} : {{property.description}}</h4>
+    <hr/>
     <div>
         <div class="col-xs-6">
             <strong>Categories</strong><br>
@@ -11,18 +12,6 @@
             <strong> (one entry per line) </strong><br>
             <textarea ng-model="property.value.values" class="col-xs-10" rows="20"></textarea>
         </div>
-        <!--<div class="row">-->
-            <!--<button ng-click="submitMeasurement()" class="btn btn-success">Submit</button>-->
-            <!--<button ng-click="clear()" class="btn btn-danger">Clear</button>-->
-            <!--<button ng-click="viewInGraph()" class="btn btn-primary">View Graph</button>-->
-        <!--</div>-->
-        <!--<div class="row" ng-if="showMeasurementGraph">-->
-            <!--<highchart config="linechartMeasurementConfig"></highchart>-->
-        <!--</div>-->
+
     </div>
-    <!--<ul class="list-unstyled">-->
-        <!--<li ng-repeat="measure in property.measurements">-->
-            <!--{{::measure.process}}-->
-        <!--</li>-->
-    <!--</ul>-->
 </div>
