--- a/website/app/application/core/components/properties/partials/property-string.html
+++ b/website/app/application/core/components/properties/partials/property-string.html
@@ -1,21 +1,12 @@
-<div ng-form="propertyForm">
-    <label class="col-xs-3 control-label">
-        {{::property.name}}
-        <i ng-if="property.required"
-           class="fa fa-fw fa-asterisk text-danger"></i>
-    </label>
-
-    <div class="col-xs-6">
+<div>
+    <h4>{{property.name}} : {{property.description}}</h4>
+    <hr/>
+    <div class="row col-xs-6">
         <input type="text"
                class="form-control"
                name="stringInput"
                ng-required="property.required"
                ng-model="property.value">
         <span class="help-block">{{::property.description}}</span>
-    </div>
-    <br><div class="row">
-        <div ng-messages="propertyForm.stringInput.$error" class="row errors">
-            <div ng-message="required">Its a required field.</div>
-        </div>
     </div>
 </div>
