Cleanup files we no longer depend. Change references to angular-grid to ag-grid. Work through display of file tree.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -984,6 +984,15 @@ header {
     background-color: #fff;
 }
 
+.ag-cell-focus {
+    background: #AC91BA;
+    color: white;
+}
+
+.dir-focus {
+    background: #AC91BA;
+}
+
 .modal.fade .modal-dialog {
     transform: translate(0, 0);
 }
