--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -9,7 +9,7 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     /* background-color: #e9e9ea; */
-    background-color: #e9e9e9;
+    /*background-color: #e9e9e9;*/
 }
 
 /*** Basic styles for website ***/
@@ -910,6 +910,7 @@ header {
     font-weight: 400;
     text-transform: uppercase;
     line-height: 24px;
+    color: #919191;
 }
 
 .heading-label {
