More resolving merge conflicts.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -1121,20 +1121,49 @@ hr.heading-label {
 }
 
 .full-height {
-    /*margin-bottom: -900px;*/
-    /*padding-bottom: 900px;*/
     height: 100%;
 }
 
-/* Style Input Boxes */
-.underline-input input[type="text"] {
-    padding: 10px;
-    border: none;
-    border-bottom: solid 2px #c9c9c9;
-    transition: border 0.3s;
+
+.process-tab {
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
-.underline-input input[type="text"]:focus,
-.underline-input input[type="text"].focus {
-    border-bottom: solid 2px #969696;
+.process-tab .tab-content {
+    padding: 5px 15px;
+    margin-right: 10px;
+}
+
+.process-tab .nav-tabs {
+    border-bottom: 1px solid #428BCA;
+}
+
+.process-tab .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    border: 1px solid #428BCA;
+    background-color: transparent;
+    border-bottom: 1px solid white;
+    color: #1e88e5;
+}
+
+.process-tab .tab-content {
+    /*min-height: 500px;*/
+}
+
+.tab-content .tab-pane {
+    padding: 30px 20px;
+}
+
+.process-tab .nav-tabs > li > a {
+    color: grey;
+}
+
+.process-tab  .table > tbody > tr > td {
+    height: 240px;
+    width: 50%;
+}
+
+.process-tab .table > tbody > tr > td > .overflow {
+    max-height: 200px;
+    overflow-y: auto;
 }
