Style rename file: Set margin on displayed items. Don't show RENAME or DOWNLOAD links when rename is active.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -981,6 +981,10 @@ header {
     padding-top: 20px;
 }
 
+.section-as-margin {
+    margin-top: 20px;
+}
+
 .no-bottom-margin {
     margin-bottom: 0px;
 }
