update sample page

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -1135,45 +1135,41 @@ hr.heading-label {
   height: 100%;
 }
 
-.process-tab {
+.content-tab {
   margin-right: 20px;
   margin-left: 20px;
 }
 
-.process-tab .tab-content {
+.content-tab .tab-content {
   padding: 5px 15px;
   margin-right: 10px;
 }
 
-.process-tab .nav-tabs {
+.content-tab .nav-tabs{
   border-bottom: 1px solid #428BCA;
 }
 
-.process-tab .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+.content-tab .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   border: 1px solid #428BCA;
   background-color: transparent;
   border-bottom: 1px solid white;
   color: #1e88e5;
 }
 
-.process-tab .tab-content {
-  /*min-height: 500px;*/
-}
-
 .tab-content .tab-pane {
   padding: 30px 20px;
 }
 
-.process-tab .nav-tabs > li > a {
+.content-tab .nav-tabs > li > a {
   color: grey;
 }
 
-.process-tab .table > tbody > tr > td {
+.content-tab .table > tbody > tr > td {
   height: 240px;
   width: 50%;
 }
 
-.process-tab .table > tbody > tr > td > .overflow {
+.content-tab .table > tbody > tr > td > .overflow {
   max-height: 200px;
   overflow-y: auto;
 }
