--- a/website/app/application/core/components/properties/partials/display-measurement.html
+++ b/website/app/application/core/components/properties/partials/display-measurement.html
@@ -1,5 +1,6 @@
-<div ng-switch="measure._type">
-    <div ng-switch-when="number">
+
+<div ng-class="{'display-inline' : displayInline === true}" ng-switch="measure._type">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="number">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 <input style="width: 60px;" ng-model="measure.value">
@@ -11,13 +12,13 @@
                 <display-process-name></display-process-name>
             </div>
         </div>
-        <div ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}"  ng-if="!editMeasure">
             {{measure.value}} {{measure.unit}}
-            <display-process-name></display-process-name>
+            <!--<display-process-name></display-process-name>-->
         </div>
     </div>
 
-    <div ng-switch-when="fraction">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="fraction">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 <input style="width: 60px;" ng-model="measure.value.attribute1">
@@ -30,13 +31,13 @@
                 <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
             </div>
         </div>
-        <div ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}" ng-if="!editMeasure">
             {{measure.value }} {{measure.unit}}
-            <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
+            <!--<display-process-name current-process="currentProcess" measure="measure"></display-process-name>-->
         </div>
     </div>
 
-    <div ng-switch-when="string">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="string">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 <input ng-model="measure.value">
@@ -47,13 +48,13 @@
                 <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
             </div>
         </div>
-        <div ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}" ng-class="{'display-inline': display === 'inline'}" ng-if="!editMeasure">
             {{measure.value}}
-            <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
+            <!--<display-process-name current-process="currentProcess" measure="measure"></display-process-name>-->
         </div>
     </div>
 
-    <div ng-switch-when="composition">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="composition">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 {{measure.element}}<input ng-model="measure.value"><input ng-model="measure.unit">
@@ -64,9 +65,9 @@
                 <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
             </div>
         </div>
-        <div ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}" ng-if="!editMeasure">
             {{measure.element}} - {{measure.value}} {{measure.unit}}
-            <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
+            <!--<display-process-name current-process="currentProcess" measure="measure"></display-process-name>-->
         </div>
     </div>
 
@@ -74,7 +75,7 @@
 
     </div>
 
-    <div ng-switch-when="histogram">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="histogram">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 <a ng-click="editHistogram(measure)"><i class="fa fa-fw fa-bar-chart"></i></a>
@@ -85,13 +86,13 @@
                 <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
             </div>
         </div>
-        <div class="row" ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}" class="row" ng-if="!editMeasure">
             <a ng-click="showHistogram(measure)"><i class="fa fa-fw fa-bar-chart"></i></a>
-            <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
+            <!--<display-process-name current-process="currentProcess" measure="measure"></display-process-name>-->
         </div>
     </div>
 
-    <div ng-switch-when="line">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="line">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 <a ng-click="editLineGraph(measure)"><i class="fa fa-fw fa-line-chart"></i></a>
@@ -102,13 +103,13 @@
                 <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
             </div>
         </div>
-        <div ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}" ng-if="!editMeasure">
             <a ng-click="showLineGraph(measure)"><i class="fa fa-fw fa-line-chart"></i></a>
-            <display-process-name current-process="currentProcess" measure="measure"></display-process-name>
+            <!--<display-process-name current-process="currentProcess" measure="measure"></display-process-name>-->
         </div>
     </div>
 
-    <div ng-switch-when="selection">
+    <div ng-class="{'display-inline' : displayInline === true}" ng-switch-when="selection">
         <div ng-if="editMeasure">
             <div ng-if="currentProcess && measure.process[0].id === currentProcess">
                 <input style="width: 60px;" ng-model="measure.value">
@@ -120,9 +121,9 @@
                 <display-process-name></display-process-name>
             </div>
         </div>
-        <div ng-if="!editMeasure">
+        <div ng-class="{'display-inline' : displayInline === true}" ng-if="!editMeasure">
             {{measure.value}} {{measure.unit}}
-            <display-process-name></display-process-name>
+            <!--<display-process-name></display-process-name>-->
         </div>
     </div>
 </div>
