--- a/website/app/application/directives/partials/detail-tabs.html
+++ b/website/app/application/directives/partials/detail-tabs.html
@@ -9,12 +9,17 @@
         </li>
     </ul>
     <div class="tab-content clearfix">
-        <setup-details ng-if="ctrl.isActive('setup')" setup="ctrl.item.setup"></setup-details>
+        <setup-details ng-if="ctrl.isActive('setup')" setup="ctrl.item.setup[0]"></setup-details>
         <samples-list ng-if="ctrl.isActive('samples')" samples="ctrl.item.samples"></samples-list>
         <processes-list ng-if="ctrl.isActive('processes')" processes="ctrl.item.processes"></processes-list>
         <file-notes ng-if="ctrl.isActive('notes')" file="ctrl.item"></file-notes>
         <files-list ng-if="ctrl.isActive('files')" files="ctrl.item.files"></files-list>
         <reviews-list ng-if="ctrl.isActive('reviews')" reviews="ctrl.item.reviews"></reviews-list>
-        <measurements-list ng-if="ctrl.isActive('measurements')" measurements="ctrl.item.measurements"></measurements-list>
+        <measurements-list ng-if="ctrl.isActive('measurements') && ctrl.item.measurements"
+                           measurements="ctrl.item.measurements">
+        </measurements-list>
+        <measurements-list ng-if="ctrl.isActive('measurements') && ctrl.item.property_sets"
+                           measurements="ctrl.item.property_sets">
+        </measurements-list>
     </div>
 </div>
